crates/wdl-grammar/tests/parsing/empty-conditional/source.wdl
# This is a test of parsing an empty conditional statement.

version 1.1

workflow foo {
    if () {

    }
}
